RESOLVED FIXED156181
[JSC][x86] Fix an assertion in MacroAssembler::branch8()
https://bugs.webkit.org/show_bug.cgi?id=156181
Summary [JSC][x86] Fix an assertion in MacroAssembler::branch8()
Benjamin Poulain
Reported 2016-04-04 13:52:33 PDT
[JSC][x86] Fix an assertion in MacroAssembler::branch8()
Attachments
Patch (1.69 KB, patch)
2016-04-04 13:54 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-04-04 13:54:32 PDT
Geoffrey Garen
Comment 2 2016-04-04 14:23:05 PDT
Comment on attachment 275567 [details] Patch r=me
Geoffrey Garen
Comment 3 2016-04-04 14:24:33 PDT
Maybe an even better version would be: static_cast<int8_t>(right.m_value) == right.m_value.
Benjamin Poulain
Comment 4 2016-04-04 14:46:10 PDT
(In reply to comment #3) > Maybe an even better version would be: static_cast<int8_t>(right.m_value) == > right.m_value. IMHO, that's shorter but the explicit version is clearer.
WebKit Commit Bot
Comment 5 2016-04-04 15:12:18 PDT
Comment on attachment 275567 [details] Patch Clearing flags on attachment: 275567 Committed r199025: <http://trac.webkit.org/changeset/199025>
WebKit Commit Bot
Comment 6 2016-04-04 15:12:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.