[JSC][x86] Fix an assertion in MacroAssembler::branch8() https://bugs.webkit.org/show_bug.cgi?id=156181

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-04-04
Reviewed by Geoffrey Garen.

* assembler/MacroAssemblerX86Common.h:
(JSC::MacroAssemblerX86Common::branch8):
The test was wrong because valid negative numbers have ones
in the top bits.

I replaced the assertion to be explicit about the valid range.

Canonical link: https://commits.webkit.org/174304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199025 268f45cc-cd09-0410-ab3c-d52691b4dbfc